--- a/src/App.css
+++ b/src/App.css
@@ -95,10 +95,11 @@
     height: 85vh;
   }
   .solutionsSection{
-    height: 140vh;
+    height: 100%;
   }
   .carouselImg{
     width: 100%;
+    height: 100%;
   }
 }
 
