--- a/src/App.css
+++ b/src/App.css
@@ -1,113 +1,125 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap");
 @import "react-alice-carousel/lib/alice-carousel.css";
-.App{
+.App {
   text-align: center;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
-.navBar, .footerSection {
+.navBar,
+.footerSection {
   background-color: #3c99c5;
-  transition: .7s;
+  transition: 0.7s;
 }
 
-.link{
+.link {
   color: #ffffff;
 }
 
-.link:hover{
+.link:hover {
   color: #152525;
 }
 
-.logoColor{
+.logoColor {
   color: #3c99c5;
 }
 
-.homeSection, .servicesSection{
+.homeSection,
+.servicesSection {
   height: 80vh;
 }
 
-.solutionsSection{
+.solutionsSection {
   height: 110vh;
 }
 
-.carta{
+.carta {
   border-radius: 10%;
-  transition: .5s;
+  transition: 0.5s;
 }
 
-.carta:hover{
+.carta:hover {
   box-shadow: 0 0 34px 0 #3c99c5;
 }
 
-.servicesSection{
+.servicesSection {
   background-color: #b4e7ff;
   height: 100%;
 }
 
-#boton{
+#boton {
   border: none;
   background: #ffffff;
   color: black;
-  transition: .5s;
+  transition: 0.5s;
 }
 
-#boton:hover{
+#boton:hover {
   background-color: #3c99c5;
   color: white;
-  transition: .5s;
+  transition: 0.5s;
 }
 
-.serviceName{
+.serviceName {
   margin-top: -50px;
 }
 
-.technologiesSection{
+.technologiesSection {
   background-color: #f8f8f8;
 }
 
-.imageTechSize{
+.imageTechSize {
   width: 150px;
   height: 100px;
 }
 
-.techCard{
-  transition: .5s;
+.techCard {
+  transition: 0.5s;
   height: 140px;
 }
 
-.techCard:hover{
+.techCard:hover {
   font-size: 25px;
 }
 
-.carouselImg{
+.carouselImg {
   width: 600px;
   height: 500px;
 }
 
-@media only screen and (max-width: 600px){
-  .navBar{
+@media only screen and (max-width: 600px) {
+  .navBar {
     text-align: left;
   }
-  .toggleLogo, .serviceButton, .footerMsg{
+  .toggleLogo,
+  .serviceButton,
+  .footerMsg,
+  .contactFooterLabel {
     display: none;
   }
-  .homeSection{
+  .serviceName {
+    font-size: 20px;
+    margin-top: -40px;
+  }
+  .homeSection {
     height: 85vh;
   }
-  .solutionsSection{
+  .solutionsSection {
     height: 100%;
   }
-  .carouselImg{
+  .carouselImg {
     width: 100%;
     height: 100%;
   }
+  .footerSection{
+    font-size: 10px;
+  }
 }
 
-@media only screen and (min-width: 1400px){
-  .homeSection{
+@media only screen and (min-width: 1400px) {
+  .homeSection {
     height: 50vh;
   }
-  .solutionsSection{
+  .solutionsSection {
     height: 80vh;
   }
 }
